# tournament_cards_client

./: .gitignore  Makefile  README.md  pubspec.yaml
lib/: App.dart  AppConstants.dart  AppLocalizations.dart  Injector.dart  main.dart
lib/data/service/: DownloadService.dart  WasmService.dart
lib/data/worker/: worker.dart  worker_web.dart
lib/domain/logic/: GeneratorBLoC.dart  WizardBLoC.dart
lib/domain/model/: AbsoluteNavigationRequest.dart  AppError.dart  PDFGeneration.dart  PDFGenerationRequest.dart  RelativeNavigationRequest.dart  WasmServiceResponse.dart
lib/domain/repository/: DownloadRepository.dart
lib/ui/: HomePage.dart  Spinner.dart  WebsiteAppBar.dart
lib/ui/herosection/: InfoBoxWidget.dart  TournamentImageWidget.dart
lib/ui/language/: LanguageItem.dart
lib/ui/model/: MatchType.dart  RadioModel.dart  SingleDoubleRadioModel.dart
lib/ui/wizard/: ExportStep.dart  PlayersStep.dart  SingleDoubleItem.dart  SingleDoubleStep.dart  TablesStep.dart  WizardStepper.dart
lib/ui/wizard/export/: ExportStep.dart
lib/ui/wizard/players/: PlayersStep.dart
lib/ui/wizard/rounds/: RoundsStep.dart
lib/ui/wizard/singledouble/: SingleDoubleItem.dart  SingleDoubleStep.dart
lib/ui/wizard/tables/: TablesStep.dart
wasm/: Cargo.toml  LICENSE_MIT
wasm/src/: lib.rs
web/: index.html  manifest.json  wasm_worker.js
web/wasm/: tournament_cards_generator.js
website/: pubspec.yaml
website/lib/: AppLocalizations.dart  AppLocalizationsDelegate.dart
website/lib/ui/: HomePage.dart  WebsiteAppBar.dart
website/web/wasm/: tournament_cards_generator.js
(+15 files in other folders)
