[package]
name = "tournament_cards_generator"
version = "0.1.0"
authors = ["Marcel Kaufmann <kaufmann@projektionisten.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.63"
social_tournament = { path = "../../social_tournament" }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
